# BreastCancerPrediction

./: .gitignore  CMakeLists.txt  README.md  VISUALIZATION_GUIDE.md  export_results.cpp  model_results.json  visualize_models.py
include/: NNCustumDatasets.hpp  NNModel.hpp  SimpleNN.hpp  TrainingPipeline.hpp
models/: NNCustumDatasets.cpp  NNModels.cpp  NNfromScratch.cpp
src/: TrainingPipeline.cpp
